PR001-165 UI create bookmark issues on mobile

--- a/src/shared/components/BookmarkCreateForm/BookmarkCreateForm.less
+++ b/src/shared/components/BookmarkCreateForm/BookmarkCreateForm.less
@@ -27,6 +27,13 @@
     margin-left: 15px;
   }
 
+  &-tags,
+  &-notes {
+    @media @br-mobile {
+      display: none;
+    }
+  }
+
   &-public {
     display: flex;
     align-items: center;
