--- a/src/shared/components/BookmarkUpdateForm/BookmarkUpdateForm.less
+++ b/src/shared/components/BookmarkUpdateForm/BookmarkUpdateForm.less
@@ -33,6 +33,13 @@
     }
   }
 
+  &-tags,
+  &-notes {
+    @media @br-mobile {
+      display: none;
+    }
+  }
+
   &-public {
     display: flex;
     align-items: center;
